--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    <center><h1>作業一</h1></center>
+    <h1>王紹宇</h1>
+    <h3>409730701</h3>
     <script src="sketch.js"></script>
   </body>
 </html>
